--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,17 @@
 {
-  "name": "WebStart",
-  "short_name": "WebStart",
-  "description": "A modern PWA starter.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#F0F4F8",
-  "theme_color": "#A0D2EB",
+  "name": "دکه ابوعلی",
+  "short_name": "دکه ابوعلی",
+  "description": "یک استارتر PWA مدرن برای دکه ابوعلی.",
   "icons": [
     {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
-  ]
+  ],
+  "theme_color": "#121212",
+  "background_color": "#121212",
+  "display": "standalone",
+  "start_url": "/",
+  "lang": "fa"
 }
