--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,22 @@
 {
   "name": "دکه ابوعلی",
   "short_name": "دکه ابوعلی",
-  "description": "یک استارتر PWA مدرن برای دکه ابوعلی.",
+  "description": "دکه ابوعلی، تجربه اصیل چای آتشی در شیراز. طعم سنت و صمیمیت را با ما در یک برنامه وب پیش‌رونده (PWA) مدرن تجربه کنید.",
   "icons": [
     {
-      "src": "/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml"
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "theme_color": "#121212",
   "background_color": "#121212",
-  "display": "standalone",
   "start_url": "/",
-  "lang": "fa"
+  "display": "standalone",
+  "orientation": "portrait"
 }
